@@ -404,7 +404,7 @@
 
  subroutine timer_start(timer_id, block_id)
 #ifdef CCSMCOUPLED
-!use perf_mod
+ use perf_mod
 #endif
 
 ! !DESCRIPTION:
@@ -439,7 +439,7 @@
    if (all_timers(timer_id)%in_use) then
 
 #ifdef CCSMCOUPLED
-!     call t_startf(trim(all_timers(timer_id)%name))
+      call t_startf(trim(all_timers(timer_id)%name))
 #endif
 
       !***
@@ -526,7 +526,7 @@
 
  subroutine timer_stop(timer_id, block_id)
 #ifdef CCSMCOUPLED
-!use perf_mod
+ use perf_mod
 #endif
 
 ! !DESCRIPTION:
@@ -663,7 +663,7 @@
       endif
 
 #ifdef CCSMCOUPLED
-!     call t_stopf(trim(all_timers(timer_id)%name))
+      call t_stopf(trim(all_timers(timer_id)%name))
 #endif
    else
       call exit_POP(sigAbort, &
