@@ -1,6 +1,16 @@
 
 ===============================================================================
 Tag Creator: njn01 
+Tag Date:    30 April 2010
+Tag Name:    pop2/trunk_tags/ccsm_pop_2_1_20100430
+Tag Testing: none. 
+
+Tag Summary: * back out ccsm_pop_2_1_20100429 changes
+               This tag is identical to ccsm_pop_2_1_20100427
+              
+M           22659   source/timers.F90
+===============================================================================
+Tag Creator: njn01 
 Tag Date:    29 April 2010
 Tag Name:    pop2/trunk_tags/ccsm_pop_2_1_20100429
 Tag Testing: ccsm4_0_beta51, oob vs oob + new timers.F90
